2006-01-30  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkwidget.c (tap_and_hold_remove_timer): Made static.

2006-01-25  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkmenu.c (gtk_menu_handle_scrolling): Return TRUE if scrolling
	was done.
	* gtk/gtkmenu.c (gtk_menu_button_press) (gtk_menu_button_release)
	(gtk_menu_motion_notify) (gtk_menu_enter_notify)
	(gtk_menu_leave_notify): Stop the signal if
	gtk_menu_handle_scrolling() returned TRUE. The event was meant for the
	scroll arrows in that case.
	N#22201

2006-01-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkdialog.c (gtk_dialog_handle_focus): Handle
	left-in-first-button as "up" and right-in-last-button as "down"
	instead of using tabs.
	N#13454

2006-01-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_ref_path
	gtk_tree_model_filter_unref_path): Free copied paths
	N#21366, N#21542

2006-01-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_leave_notify): clear
	queued_activate_row so that the next button-release event will not be
	interpreted as a single tap even if stylus is moved back to the same
	row
	N#20552

2006-01-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (timeout_tap_and_hold_animation): use pixbuf options
	'x_hot' and 'y_hot' to determine animation hotspot, if defined;
	otherwise, set hotspot to animation center
	N#20212

2006-01-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkmenu.c (gtk_menu_window_visibility_notify_event): Removed
	gdk_window_is_visible() check. It doesn't work for foreign windows and
	it's not actually needed.
	N#18225

2006-01-04  Johan Bilien  <johan.bilien@nokia.com>

	Backported from 2.8:

	* gdk/gdkwindow.h
	* gdk/x11/gdkwindow-x11.c: Added gdk_window_set_urgency_hint()
	* gdk/x11/gdkwindow-x11.h (struct _GdkTopLevelX11): added urgency_hint
	* gdk/x11/gdkwindow-x11.c (update_wm_hints): update XUrgencyHint