@@ -1,4 +1,10 @@
 2006-01-30  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
+	* gtk/gtklabel.[ch] (gtk_label_get_translatable,
+	gtk_label_set_translatable, gtk_label_retranslate,
+	GtkLabel::translatable): Remove unused run-time locale change feature.
+
+2006-01-30  Tommi Komulainen  <tommi.komulainen@nokia.com>
 	
 	* gtk/gtkwidget.c (tap_and_hold_remove_timer): Made static.
 
